[tool.poetry]
name = "ansible-vault-rotate"
version = "0.1.0"
description = "Advanced Python CLI to rotate the secret used for ansible vault inline secrets and files in a project"
authors = [
    "Timo Reymann <Timo.Reymann@trustedshops.de>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trustedshops-public/python-ansible-vault-rotate"
packages = [
    { include = "ansible_vault_rotate" }
]
exclude = [
    "**/*_test.py",
    "**/__testdata__/**"
]
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.9"
ansible-core = "^2.9.0"

[tool.poetry.scripts]
ansible-vault-rotate = 'ansible_vault_rotate.cli.run:run'

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^7.0.4"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/trustedshops-public/python-ansible-vault-rotate/issues"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "*_test"]

[tool.coverage.report]
fail_under = 70

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
